# evandrix.github.com

./: .gitignore  .gitmodules  CodeSnippets.cbxml  Google I O 2011.html  README  README.md  blender_makeCube.py  enscript.sh  enscript_gcj.sh  hello_world_64bit.asm  index.html  my-cal.sh  styles.css
IOCCC/: Makefile  (+2 more)
cpp/nanocrunch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lena.out  mona-lisa.out  nanocrunch  nanocrunch.cpp  so-logo.out
defcon/fuzzers/funk/: AUTHORS  Makefile  Makefile.in  README  config.status  configure  configure.in  setuid_repl.sh
defcon/fuzzers/funk/autom4te.cache/: output.0  requests  traces.0  traces.1
defcon/fuzzers/funk/eggs/: bit-cat.egg  crc16.egg
defcon/fuzzers/funk/src/eggs/: Makefile
defcon/fuzzers/funk/src/eggs/bit-cat/: Makefile  bit-cat  bit-cat.html  bit-cat.scm  bit-cat.setup  doc.scm
defcon/fuzzers/funk/src/eggs/crc16/: Makefile  crc16.html  crc16.scm  crc16.setup  doc.scm
defcon/fuzzers/funk/src/eggs/eformat/: eformat.exports  eformat.scm  eformat.setup
defcon/fuzzers/funk/src/eggs/raw-sockets/: doc.scm  raw-sockets.exports  raw-sockets.html  raw-sockets.scm  raw-sockets.setup
defcon/fuzzers/funk/src/eggs/raw-sockets-experimental/: LICENCE  doc.scm  profile-prog.scm  raw-sockets-experimental.html  raw-sockets-experimental.scm  raw-sockets-experimental.setup
defcon/fuzzers/funk/src/scm/: Makefile  PROFILE.7937  PROFILE.7953  default-fcns.scm  demo1.scm  demo2.scm  ethernet.scm  ip4.scm  loopback.scm  make-eth-packet.scm  profiler.scm  rand.scm  table.scm  tcp.scm  test.scm  udp.scm
defcon/fuzzers/funk/src/scm/repl/: remote_chicken.scm
go/: hw  (+3 more)
(+2961 files in other folders)
